--- a/src/main/resources/templates/Pages/login.html
+++ b/src/main/resources/templates/Pages/login.html
@@ -80,8 +80,10 @@ button:hover{
 <body>
 
 <div class="container">
+     <h1 th:text="${error}"></h1>
     <h2>Login</h2>
-    <form th:action="@{/login}" method="post">
+    <form th:action="@{/login}" method="post" >
+       
         <input type="email" name="email" placeholder="Enter Email" required>
         <input type="password" name="password" placeholder="Enter Password" required>
         <button type="submit">Login</button>
